--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,6 +39,11 @@ dependencies:
   shared_preferences: ^2.1.2
   sqflite: ^2.2.8+4
   path: ^1.8.3
+  flutter_screenutil: ^5.8.4
+  fl_chart: ^0.63.0
+
+  flutter_launcher_icons: ^0.13.1
+
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +68,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/age_rating/
+    - assets/contents_rating/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
@@ -78,12 +86,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: normal
+      fonts:
+        - asset: assets/KNPSKkomi.otf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
@@ -92,3 +99,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+#
